# shellIDE

./: .replit  api_routes.py  auth.py  config.py  database.py  file_manager.py  main.py  models.py  openrouter_client.py  project_manager.py  project_templates.py  pyproject.toml  terminal_manager.py
attached_assets/: Pasted--ShellIDE-The-AI-Powered-Development-Platform-ShellIDE-is-a-powerful-desktop-only-AI-powered-de-1749118757212.txt
electron/: main.js  package.json  preload.js
src/: App.js  index.js
src/components/: AIAssistant.js  AuthScreen.js  FileExplorer.js  MainEditor.js  ProjectManager.js  Settings.js  Terminal.js
static/: index.html
static/css/: style.css  styles.css
static/js/: app.js  editor.js  file-explorer.js  terminal.js
templates/: index.html  login.html
